--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rvp15.github.io/react-shoppingapp-context-reducer",
+  "homepage": "https://rvp15.github.io/react-shoppingapp-context-reducer",
   "name": "react-shoppingapp-context-reducer",
   "version": "0.1.0",
   "private": true,
